syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/shark-ci/shark-ci/internal/proto";


service PipelineReporter{
    rpc PipelineStarted(PipelineStartedRequest) returns (Empty) {}
    rpc PipelineFinnished(PipelineFinnishedRequest) returns (Empty) {}
}

message Empty {}

message PipelineStartedRequest {
    int64 pipeline_id = 1;
    google.protobuf.Timestamp started_at = 2;
}

message PipelineFinnishedRequest {
    int64 pipeline_id = 1;
    google.protobuf.Timestamp finished_at = 2;
    PipelineFinnishedStatus status = 3;
    optional string error = 4;
}

enum PipelineFinnishedStatus {
    SUCCESS = 0;
    FAILURE = 1;
}
